Fix etherProviders.getSigner call
Without passing in an address, this now throws `unknown account #0`. Just pass in the
owner address as a sensible default, it's not used anyway

(I think the last time this was built was on a previous version of ethers providers and/or
node13 so this wasn't an issue)

--- a/packages/relay/package.json
+++ b/packages/relay/package.json
@@ -8,6 +8,7 @@
     "README.md"
   ],
   "scripts": {
+    "dev": "node dist/runServer.js",
     "tsc": "tsc",
     "watch-tsc": "tsc -w --preserveWatchOutput",
     "lint": "eslint -f unix .",
