--- a/dockers/docker-compose.yml
+++ b/dockers/docker-compose.yml
@@ -1,45 +1,17 @@
 # You must have the following environment variable set in .env file:
 #  HOST   | my.example.com   | Your Relay Server URL exactly as it is accessed by GSN Clients
 
-version: '2'
+version: "2"
 
 services:
-  nginx-proxy:
-    image: nginxproxy/nginx-proxy
-    container_name: nginx-proxy
-    restart: unless-stopped
-    ports:
-      - '443:443'
-      - '80:80'
-    volumes:
-      - conf:/etc/nginx/conf.d
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - certs:/etc/nginx/certs:ro
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-    logging:
-      driver: "json-file"
-      options:
-        max-size: 10m
-        max-file: "10"
-
-  acme-companion:
-    image: nginxproxy/acme-companion
-    container_name: nginx-proxy-acme
-    restart: unless-stopped
-    depends_on:
-      - nginx-proxy
-    volumes_from:
-      - nginx-proxy
-    volumes:
-      - certs:/etc/nginx/certs:rw
-      - acme:/etc/acme.sh
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-
   gsn:
     container_name: gsn
-    ports: [ '8080:80' ] #bypass https-portal
-    image: opengsn/jsrelay:3.0.0-beta.3
+    ports:
+      - "443:443"
+      - "80:80"
+    # Make sure to replace this `build` folder with an actual image when deploying, e.g.
+    # image: rly-network/jsrelay:3.0.0-beta.3
+    build: ./jsrelay
     restart: on-failure
 
     # /app/data - relay specific folder
@@ -53,20 +25,9 @@ services:
       port: 80
       workdir: /app/data
       config: /app/config/gsn-relay-config.json
-      LETSENCRYPT_HOST: $HOST
-      VIRTUAL_HOST: $HOST
-      VIRTUAL_PATH: /
-      VIRTUAL_DEST: /
     mem_limit: 100M
     logging:
       driver: "json-file"
       options:
         max-size: 10m
         max-file: "10"
-
-volumes:
-  conf:
-  vhost:
-  html:
-  certs:
-  acme:
