Add useEstimateGasForCalldataCost setting
Currently calldataEstimationSlackFactor is only used if environment is "arbitrum" (i.e. for L2s) and
isn't controllable by the config file.

This is kind of a hack so might undo it, but not sure why the currently running relay server
(opengsn/jsrelay:3.0.0-beta.3) returns an acceptable transactionCalldata gas estimate but running
this code now throws an error (probably just outdated code, pre EIP-2028?). Figure at least this way
we can set a low slack factor without just ignoring the check completely (testing on local, anything above
about 0.5 causes the error to be thrown)

--- a/dockers/config-sample/rly-gsn-relay-config-sample.json
+++ b/dockers/config-sample/rly-gsn-relay-config-sample.json
@@ -10,5 +10,7 @@
   "workerTargetBalance": "2000000000000000000",
   "managerMinBalance": "1000000000000000000",
   "managerTargetBalance": "2000000000000000000",
-  "runPaymasterReputations": false
+  "runPaymasterReputations": false,
+  "calldataEstimationSlackFactor": 0.3,
+  "useEstimateGasForCalldataCost": true
 }
