--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tsc": "yarn lerna-tsc",
     "lerna-typechain-generate": "lerna run typechain-generate --stream --ignore @opengsn/paymasters",
     "lerna-typechain-generate-paymasters": "lerna run typechain-generate --stream --scope @opengsn/paymasters",
+    "lerna-version": "lerna version",
     "lerna-publish": "lerna publish --pre-dist-tag next",
     "lerna-publish-force-no-git": "lerna publish --no-push --no-git-tag-version --force-publish",
     "lerna-chmod-commands": "lerna run chmod-commands",
